--- a/base.css
+++ b/base.css
@@ -315,7 +315,7 @@
 }
 
 .rtcConnectionStatusConnected-VRZDjy>div::after {
-  content: 'Salmon';
+  content: 'Swiqyy Le gros bg';
   font-size: 14px;
 }
 
@@ -326,7 +326,7 @@
 }
 
 .rtcConnectionStatusConnecting-3322Pa>div::after {
-  content: 'Kelp';
+  content: 'Swiqyy Le gros bg';
   font-size: 14px;
 }
 
